2009-12-14  Nayan Kumar K  <nayankk@gmail.com>

Reviewed by Darin Adler.

        Fix for compilation errors in WML enabled builds.

        https://bugs.webkit.org/show_bug.cgi?id=32481

        * wml/WMLInputElement.cpp:
        (WebCore::WMLInputElement::setValue):
        (WebCore::WMLInputElement::setValueForUser):
        * wml/WMLInputElement.h:

Canonical link: https://commits.webkit.org/43531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52107 268f45cc-cd09-0410-ab3c-d52691b4dbfc